# JCollections

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  JCdatatype.h  hashset.c  hashset.h  hashtable.c  hashtable.h  jcdatatype.h  jcollections.h  lklist.c  lklist.h  queue.c  queue.h  stack.c  stack.h  utils.c  utils.h  vrtlist.h  vrtqueue.h
test/: CMakeLists.txt
test/hashset/: CMakeLists.txt  hashset.c
test/hashtable/: CMakeLists.txt  hashtable.c
test/lklist/: CMakeLists.txt  lktest.c
test/queue/: CMakeLists.txt  queue.c
test/stack/: CMakeLists.txt  stack.c
test/vrtlist/: CMakeLists.txt  vrtlist.c
test/vrtqueue/: CMakeLists.txt  vrtqueue.c
